@@ -1,3 +1,9 @@
+2011-08-18  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclUniData.c: [Bug 3393714] overflow in toupper delta
+	* tools/uniParse.tcl
+	* tests/utf.test
+
 2011-08-16  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tclCmdAH.c:    [Bug 3388350] mingw64 compiler warnings
